--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,18 @@ user:
     maxRetryCount: 3
     lockTime: 10
 
+# 验证码
+captcha:
+  # 页面 <参数设置> 可开启关闭 验证码校验
+  # 验证码类型 math 数组计算 char 字符验证
+  type: MATH
+  # line 线段干扰 circle 圆圈干扰 shear 扭曲干扰
+  category: CIRCLE
+  # 数字验证码位数
+  numberLength: 1
+  # 字符验证码长度
+  charLength: 4
+
 # Sa-Token配置
 sa-token:
   # token名称 (同时也是cookie名称)
