--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
 spring:
   datasource:
     driver-class-name: com.p6spy.engine.spy.P6SpyDriver
-    url: jdbc:p6spy:mysql://t1-mysql-01.sdjpw.com.cn:3306/my_test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8&autoReconnect=true&rewriteBatchedStatements=true
-    username: t1_app
-    password: EP5KeYXVMbLow15M
+    url: jdbc:p6spy:mysql://localhost:3306/my_test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8&autoReconnect=true&rewriteBatchedStatements=true
+    username: root
+    password: root123
     type: com.zaxxer.hikari.HikariDataSource
     hikari:
       minimum-idle: 5
@@ -18,10 +18,10 @@ spring:
       connection-test-query: SELECT 1
   data:
     redis:
-      host: t1-redis-02.sdjpw.com.cn
+      host: 127.0.0.1
       port: 6379
       database: 0
-      password: Q8VuNPoWhva8uT0x
+      password: 123456
 user:
   password:
     maxRetryCount: 3
