--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,13 @@
             <version>2.57</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+
 
         <dependency>
             <groupId>junit</groupId>
