--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
 spring:
   datasource:
     driver-class-name: com.p6spy.engine.spy.P6SpyDriver
-    url: jdbc:p6spy:mysql://localhost:3306/my_test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8&autoReconnect=true&rewriteBatchedStatements=true
-    username: root
-    password: root123
+    url: jdbc:p6spy:postgresql://localhost:5866/highgo?currentSchema=my_test
+    username: test
+    password: Root@123
     type: com.zaxxer.hikari.HikariDataSource
     hikari:
       minimum-idle: 5
